se remplaza el metodo auth, por uno asociado con firebase.